@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.1,v 1.1.2.16 2000/12/31 21:30:56 jhawk Exp $
+#	$NetBSD: CHANGES-1.5.1,v 1.1.2.17 2001/01/17 01:44:52 tv Exp $
 
 A complete list of changes from NetBSD 1.5 to NetBSD 1.5.1:
 
@@ -444,3 +444,7 @@ share/man/man4/vlan.4				1.7
   to 12.4.13+wpaul, and support the Netgear GA620T copper gigabit card,
   and the Alteon ACEnic 100baseSX and 1000baseT gigabit cards. Various
   small changes from FreeBSD.
+
+sys/arch/i386/i386/sys_machdep.c                1.55
+
+  Validate gate targets correctly.
